[gd_scene load_steps=8 format=3 uid="uid://cnvrm83f3jean"]

[ext_resource type="Script" path="res://user_interface/player_ui.gd" id="1_ar28p"]
[ext_resource type="Texture2D" uid="uid://bvb2ptot5jry5" path="res://assets/Bone.png" id="2_4ue32"]
[ext_resource type="Texture2D" uid="uid://cejcgwj5yaedy" path="res://assets/base_cards/PicsArt_11-19-09.10.24.png" id="3_tqxep"]
[ext_resource type="Texture2D" uid="uid://dd7k4bgfvg8pi" path="res://assets/deck_background.png" id="4_xevug"]
[ext_resource type="Texture2D" uid="uid://dgtlvsphqrh8u" path="res://assets/bones_background.png" id="5_v5s3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06sgl"]
size = Vector2(1266, 485)

[sub_resource type="CircleShape2D" id="CircleShape2D_hqhir"]
radius = 8.06226

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_ar28p")

[node name="Cards" type="Node" parent="."]

[node name="PlaceArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceArea"]
position = Vector2(640, 253.5)
shape = SubResource("RectangleShape2D_06sgl")

[node name="Mouse" type="Area2D" parent="." groups=["mouse"]]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_hqhir")

[node name="Bone" type="Sprite2D" parent="."]
position = Vector2(214, 569)
scale = Vector2(0.57, 0.57)
texture = ExtResource("2_4ue32")

[node name="BonesLabel" type="Label" parent="."]
offset_left = 243.0
offset_top = 539.0
offset_right = 367.0
offset_bottom = 638.0
tooltip_text = "Current amount of bones you have."
mouse_filter = 1
mouse_default_cursor_shape = 16
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.282353)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 22
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 70
text = "0
"
horizontal_alignment = 1
uppercase = true

[node name="Deck" type="Node2D" parent="."]
position = Vector2(1161, 565)

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
position = Vector2(0, 20)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="Sprite2D2" type="Sprite2D" parent="Deck"]
position = Vector2(5, 15)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="Sprite2D3" type="Sprite2D" parent="Deck"]
position = Vector2(10, 10)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="Sprite2D4" type="Sprite2D" parent="Deck"]
position = Vector2(15, 5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="Sprite2D5" type="Sprite2D" parent="Deck"]
position = Vector2(20, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="Sprite2D6" type="Sprite2D" parent="Deck"]
position = Vector2(25, -5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tqxep")

[node name="DeckLabel" type="Label" parent="."]
offset_left = 1178.0
offset_top = 577.0
offset_right = 1233.0
offset_bottom = 649.0
tooltip_text = "Remaining cards on deck before reshuffle."
mouse_filter = 1
mouse_default_cursor_shape = 16
theme_override_colors/font_color = Color(1, 0.94902, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DeckBackground" type="Sprite2D" parent="."]
z_index = -50
position = Vector2(660, 611)
scale = Vector2(4.40625, 3.53125)
texture = ExtResource("4_xevug")

[node name="BonesBackground" type="Sprite2D" parent="."]
z_index = -55
position = Vector2(278, 628)
scale = Vector2(5, 5)
texture = ExtResource("5_v5s3g")

[connection signal="area_entered" from="PlaceArea" to="." method="_on_place_area_area_entered"]
[connection signal="area_exited" from="PlaceArea" to="." method="_on_place_area_area_exited"]
[connection signal="area_entered" from="Mouse" to="." method="_on_mouse_area_entered"]
[connection signal="area_exited" from="Mouse" to="." method="_on_mouse_area_exited"]
